--- a/public/demo.html
+++ b/public/demo.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <script src="js/mqtt-client.js"></script>
-    <script src="js/mqtt.js"></script>
+
+
+
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script>
   </head>
@@ -9,14 +10,15 @@
 <script type="text/javascript">
 
   // Create a client instance
-  client = new Paho.MQTT.Client("localhost", 1883,"web_" + parseInt(Math.random() * 100, 10)); 
-  //Example client = new Paho.MQTT.Client("m11.cloudmqtt.com", 32903, "web_" + parseInt(Math.random() * 100, 10));
+  client = new Paho.MQTT.Client("172.16.2.72", 1883,"web_" + parseInt(Math.random() * 100, 10)); 
+  //Example
+  // client = new Paho.MQTT.Client("test.mosquitto.org", 8080 , "web_" + parseInt(Math.random() * 100, 10));
 
   // set callback handlers
   client.onConnectionLost = onConnectionLost;
   client.onMessageArrived = onMessageArrived;
   var options = {
- //   useSSL: true,
+   useSSL: false,
    // userName: "username",
   ///  password: "password",
     onSuccess:onConnect,
